# TrabajoES

./: Makefile.am  build-analyze.sh  configure.ac  main  primercodigo  primercodigo.cpp  sonar-project.properties
.github/workflows/: build.yml
src/: Makefile.am  primercodigo.cpp
