# Nombre del programa y archivos fuente
Programa = main
Programa_SOURCES = src/main.o

# Opciones de compilación y enlace
AM_CFLAGS = -Wall

# Archivos requeridos por automake
AUTOMAKE_OPTIONS = foreign

# Crear archivos requeridos
AUTHORS:
    touch AUTHORS

ChangeLog:
    touch ChangeLog

INSTALL:
    touch INSTALL

NEWS:
    touch NEWS

README:
    touch README

COPYING:
    cp /usr/share/common-licenses/GPL-3 $@

